# pithsim

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: dashboard.yml  ddu.yml  firmware.yml  handbrake.yml  pedals.yml
aur/pithddu-dashboard/: .SRCINFO  PKGBUILD
aur/pithddu-dashboard-bin/: .SRCINFO  PKGBUILD
dashboard/: 99-pith.rules  Cargo.toml  build.rs
dashboard/cars/: f1.json
dashboard/examples/: ui_preview.rs
dashboard/src/: app.rs  callbacks.rs  catalog.rs  ctx.rs  hb.rs  loops.rs  main.rs  paths.rs  pedals.rs  persist.rs  screenshot.rs  state.rs  vjoy.rs  wifi.rs  wireless.rs
dashboard/src/device/: dash.rs
dashboard/src/firmware/: build.rs  mod.rs
dashboard/src/net/: cardata.rs  releases.rs
dashboard/src/telemetry/: derive.rs  f1.rs  field_registry.rs  format.rs  mod.rs  pcars.rs
dashboard/src/ui_bridge/: race.rs  telemetry.rs  udp.rs  uidoc.rs
dashboard/ui/: app.slint  models.slint
dashboard/ui/components/: chrome.slint  force_curve.slint
dashboard/ui/screens/: device.slint  firmware.slint  handbrake.slint  overview.slint  pedals.slint  race-screen.slint  wireless.slint
docs/: pedals-board-map.md  pedals.md  telemetry-games.md
firmware/: Cargo.toml  justfile  sdkconfig.defaults
firmware/ddu/: .gitignore  Cargo.toml  README.md  build.rs  justfile  partitions.csv  sdkconfig.defaults
firmware/ddu/.cargo/: config.toml
firmware/ddu/components/pith_usb/: CMakeLists.txt  idf_component.yml  pith_usb.c
firmware/ddu/components/pith_usb/include/: pith_usb.h  tusb_config.h
firmware/ddu/main/: field_registry.json
firmware/ddu/src/: device.rs  display.rs  hid.rs  led_strip_bindings.h  main.rs  ota.rs  state.rs  usb.rs
firmware/handbrake/: .gitignore  Cargo.toml  build.rs  justfile  partitions.csv  sdkconfig.defaults
firmware/handbrake/.cargo/: config.toml
firmware/handbrake/components/pith_hb_usb/: CMakeLists.txt  pith_hb_usb.c
firmware/handbrake/components/pith_hb_usb/include/: pith_hb_usb.h
firmware/handbrake/src/: autozero.rs  cal.rs  device.rs  hx711.rs  main.rs  usb.rs
firmware/main/: field_registry.json
firmware/pedals/: .gitignore  Cargo.toml  build.rs  justfile  partitions.csv  sdkconfig.defaults
firmware/pedals/.cargo/: config.toml
firmware/pedals/components/pith_pedals_usb/: CMakeLists.txt  idf_component.yml  pith_pedals_usb.c
firmware/pedals/components/pith_pedals_usb/include/: pith_pedals_usb.h  tusb_config.h
firmware/pedals/src/: ads1256.rs  board.rs  device.rs  led.rs  main.rs  ota.rs  runtime.rs  servo.rs  usb.rs  wifi.rs
firmware/pith-fw-wifi/: Cargo.toml
firmware/pith-fw-wifi/src/: lib.rs
firmware/src/: display.rs  led.rs  main.rs  sim.rs  state.rs  ui.rs  usb.rs
pith-bios/: Cargo.toml
pith-bios/src/: lib.rs
pith-core/: Cargo.toml  build.rs
pith-core/src/: format.rs  le.rs  lib.rs  net.rs  relatives.rs  shift.rs  shm.rs  simhub.rs
pith-device/: Cargo.toml
pith-device/examples/: hbtest.rs  jss_probe.rs
pith-device/src/: dash.rs  handbrake.rs  hid.rs  lib.rs  pedals.rs  serial.rs
pith-flash/src/: main.rs
pith-hb-core/: Cargo.toml
pith-hb-core/src/: calibration.rs  lib.rs  proto.rs
pith-pedals-core/: Cargo.toml
pith-pedals-core/src/: admittance.rs  controller.rs  curve.rs  effects.rs  filter.rs  kinematics.rs  lib.rs  loadcell.rs  modbus.rs  protocol.rs  servo_jss57p.rs
pith-recovery/: Cargo.toml  justfile  partitions.csv
pith-recovery/components/pith_msc/: CMakeLists.txt  idf_component.yml  pith_msc.c
pith-recovery/components/pith_msc/include/: pith_msc.h  tusb_config.h
pith-recovery/src/: fat12.rs  main.rs
pith-shm-bridge/: Cargo.toml  pith-shim-run
pith-shm-bridge/src/: lib.rs
pith-sim/: Cargo.toml
pith-sim/src/: ac.rs  acc.rs  codemasters.rs  decoders.rs  eawrc.rs  f1.rs  ffb.rs  forza.rs  gt7.rs  le.rs  lib.rs  outgauge.rs  pcars.rs  piboso.rs  rf2.rs  shm.rs  shm_read.rs
pith-ui/: Cargo.toml
pith-ui/examples/: preview.rs
pith-ui/src/: lib.rs
