# pithddu monorepo — host workspace.
#
# The firmware is a separate sub-workspace (its own esp toolchain + xtensa target
# via firmware/.cargo + firmware/rust-toolchain.toml), so it is EXCLUDED here and
# built with `cd firmware/ddu `cd firmware && cargo build``cd firmware && cargo build` cargo build`. The shared crates (pith-core, pith-ui)
# are no_std and host-testable, so they're members of this workspace AND path-
# depended by the firmware.
[workspace]
resolver = "2"
members = ["dashboard", "pith-core", "pith-sim", "pith-ui", "pith-bios", "pith-device", "pith-flash"]
# firmware: separate esp toolchain. pith-shm-bridge: Windows-only (Proton-Wine
# in-prefix tools), built with `--target x86_64-pc-windows-gnu`.
exclude = ["firmware", "pith-recovery", "pith-shm-bridge"]

[profile.release]
opt-level = 2
strip = true
codegen-units = 1
