[package]
name = "pith-core"
version = "0.9.5"
edition = "2021"
description = "Pure-logic core for pithddu firmware: telemetry parse + wire formatting + field registry. Host-testable, no esp deps."
license = "MIT"

[dependencies]
# Optional: derive Serialize/Deserialize on the shared enums (Fmt/RuleOp/Pal) so
# they can travel in the pith-ui UiDoc / wire format. Off by default (the firmware
# build stays dependency-light unless it opts in).
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[features]
serde = ["dep:serde"]

[build-dependencies]
serde_json = "1"
