[package]
name = "pith-hb-firmware"
version = "0.2.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"
description = "Pith Handbrake firmware (ESP32-S2 / Lolin S2 Mini): HX711 load cell -> USB HID axis"
repository = "https://github.com/lemonxah/pithsim"
license = "MIT"

[[bin]]
name = "pith-hb"
path = "src/main.rs"

# Own workspace (own esp toolchain + xtensa target); excluded from the monorepo
# root workspace. The shared crate is a path-dep into the repo root.
[workspace]

# Release tuned for latency: the workload is tiny (HX711 at 10 SPS) but O2 +
# LTO sharpens the USB callback/filter paths, and the 3 MB factory partition
# has room to spare.
[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
# esp-idf-svc re-exports esp-idf-hal as `esp_idf_svc::hal` — no separate dep needed.
esp-idf-svc = "0.51"
pith-hb-core = { path = "../../pith-hb-core" }

[build-dependencies]
embuild = "0.33"

# USB stack: a local C shim over raw `espressif/tinyusb` (components/pith_hb_usb),
# NOT esp_tinyusb — see pithddu's firmware for why (FreeRTOS OSAL/packed-struct
# bindgen walls). bindgen only processes the shim's clean header.
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/pith_hb_usb"]
bindings_header = "components/pith_hb_usb/include/pith_hb_usb.h"
